termino do backend e edicao do gitignore

--- a/templates/projeto/base.html
+++ b/templates/projeto/base.html
@@ -2,8 +2,7 @@
 <html lang='pt-br'>
     <head>
         <meta charset="utf-8" />
-        <meta name="description" content="a descrição do seu site em no máximo 90 caracteres">
-        <meta name="keywords" content="escreva palavras-chaves curtas, máximo 150 caracteres">
+        <meta httq-equiv="Content-Type" content="text/html" />
         <title>Blog do Jensen: {% block titulo %} {% endblock %}</title>
     </head>
 
@@ -19,5 +18,9 @@
                 {% block conteudo %} {% endblock %}
             </div>
         </article>
+        
+        <footer>
+            
+        </footer>
     </body>
 </html>
